# . proc  get/setpriority  (see BSD::Resource)

# . implementation of nl_langinfo
# . change in ::Module of detection of constants which need autogeneration
# . charset of locale only via nl_langinfo(CODESET)

version 1.01:

	Improvements:
	- more float constants treated as strings [cpantesters]
	- apparently strptime not supported on FreeBSD [cpantesters]
	  (although manual page exists)

version 1.00: Tue  5 May 14:49:33 CEST 2020

FreeBSD has no _PC_LINK_MAX (t/62pathconf.t)
http://www.cpantesters.org/cpan/report/153c7110-1a79-11e8-92d0-ae77c247440e
Use _PC_FILESIZEBITS ?

	Fixes:
	- SETLK was missing
	- The manual-page POSIX::1003::Fcntl was messed-up
	- Use XPUSHs, not PUSHs [Lars Dɪᴇᴄᴋᴏᴡ 迪拉斯]

	Improvements
	- add AT_ constants for dirfd *at commands
	- converted to GitHub

version 0.99_08: Thu 17 Mar 12:10:13 CET 2016

	Fixes:
	- glob may return undef which is an SV*
	- windows: no mknod
	- cygwin glob test fails
	- rlimit show example values of RLIM_

	Improvements:
	- rlimit display large contants as 2**
	- added ::Time::strptime()
	- use own ::Time::strftime() and ::mktime() with a simple hash
	- added ::Proc::getpid() and ::getppid()
	- add EPOLLEXCLUSIVE (Linux 4.5) EPOLLWAKEUP, and EPOLL_CLOEXEC

version 0.99_07: Wed Apr  8 15:12:20 CEST 2015

	Fixes:
	- no glob() on Windows [cpantesters]
	- freebsd glob error callback already shows trailing '/'
	- export tags of some modules

	Improvements:
	- provide ::FS::fnmatch()
	- remove preparations for unimplemented wordexp()
	- start system/solaris.c [Abeltje]
	- internally rename poll_table into events_table, to contain more
	  collections.

version 0.99_06: Tue Apr  7 09:51:30 CEST 2015

	Fixes:
	- openbsd has only one confstr.  Fix test [yary]
	- windows major/minor/makedev/confstr/lockf missing [cpantesters]
	- *posix_names failed for AF_DECnet, because of lowercase

	Improvements:
	- glob constants available everywhere (it seems)
	- implementation of glob() interface and t/50glob.t